# realtime-vc-gui

./: .gitignore  README.md  build.py  pyproject.toml
.github/workflows/: ci.yml
extra-hooks/: hook-librosa.py
rtvc/: __main__.py  audio.py  config.py  gui.py  i18n.py
rtvc/locales/: en_US.yaml  zh_CN.yaml
rtvc/plugins/: __init__.py  base.py  diffusion.py  hifisinger.py  rvc.py
tests/: test_sola.py
