[project]
name = "realtime-vc-gui"
version = "0.1.0"
description = ""
authors = [
    {name = "lengyue", email = "lengyue@lengyue.me"},
]
dependencies = [
    "noisereduce>=2.0.1",
    "sounddevice>=0.4.6",
    "torch>=2.0.1",
    "torchaudio>=2.0.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
rtvc = "rtvc_gui.__main__:main"

[tool.pdm]
[tool.pdm.build]
includes = ["rtvc_gui"]

[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.12.0",
    "black>=23.3.0",
    "pytest>=7.3.1",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
lint = { shell = "black . && isort ." }
test = { shell = "PYTHONPATH=. pytest -n=auto -q tests" }
docs = { shell = "sphinx-autobuild docs docs/_build/html" }

[[tool.pdm.source]]
type = "find_links"
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
verify_ssl = true

[tool.isort]
profile = "black"
extend_skip = ["dataset", "logs"]
